# glic

./: CMakeLists.txt  main.cbp  main.cpp  tmp  triangle.mesh
data/silene/: A_canthare.d.mesh  A_canthare.d.sol  B_3151.d.sol  C_3354.d.sol  D_3354a.d.sol
doc/: doxy_glic
include/: glic.h  igl.h
include/glic/: axis.h  canvas.h  cube.h  defs.h  group.h  keyboard.h  light.h  material.h  math1.h  mesh.h  mouse.h  object.h  profile.h  scene.h  shader.h  transform.h  view.h
include/igl/: camera.h  canvas.h  defs.h  light.h  material.h  math.h.tmp  object.h  scene.h  window.h
shaders/: shader.frag  shader.vert  smooth_shader.frag  smooth_shader.vert
sources/: axis.cpp  camera.cpp  canvas.cpp  colorgenerator.cpp  cube.cpp  group.cpp  keyboard.cpp  light.cpp  material.cpp  mesh.cpp  mouse.cpp  object.cpp  profile.cpp  scene.cpp  shader.cpp  sphere.cpp  transform.cpp  view.cpp  window.cpp
src/: igl.hpp  light.cpp  light.hpp  main.cpp  makefile  object.cpp  object.hpp  properties.cpp  properties.hpp  window.hpp
